<resources>
    <string name="app_name">rendecine</string>
    <string name="nombreInicio">Nombre de usuario:</string>
    <string name="emailInicio">Email de usuario:</string>
    <string name="contraInicio">Contraseña de usuario:</string>
    <string name="botonRegistrarse">Registrarse</string>
    <string name="botonYaregistrado">Ya estoy registrado</string>
    <string name="entrar">Entrar</string>
    <string name="obras">Obras adaptados a la literatura</string>
    <string name="juegos">Juegos</string>
    <string name="grabacion">Ver grabacion</string>
    <string name="foro">Foro</string>
    <string name="fraseJuego">¿Sabrías adivinar la pelicula...</string>
    <string name="adivinaEscena">...viendo una escena?</string>
    <string name="adivinaFrase">...viendo una imagen/frase?</string>
    <string name="fraseObra">¿Sabrías...</string>
    <string name="interpretarEscena">...interpretar una escena?</string>
    <string name="interpretarAudio">...doblar una escena?</string>
    <string name="corregir">Corregir</string>
    <string name="preguntaEscena">¿A que pelicula corresponde la escena?</string>
    <string name="siguiente">Siguiente</string>
    <string name="preguntaFrase">¿A que pelicula corresponde la imagen?</string>
    <string name="no_camera">No hay camara</string>
    <string name="no_app">No hay aplicacion de camara</string>
    <string name="no_micro">No hay microfono</string>
    <string name="grabar">Grabar</string>
    <string name="asunto">Asunto del mensaje:</string>
    <string name="mensaje">Mensaje:</string>
    <string name="enviar">Enviar</string>
    <string name="escribir">Escribir mensaje</string>
    <string name="usuario">Nombre usuario</string>
    <string name="euskeraEscena">  </string>
    <string name="euskeraObra">   </string>

</resources>
