<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fraseJuego"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adivinaEscena"
        android:id="@+id/botonEscena"
        android:layout_gravity="center_horizontal"
        android:onClick="escena"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adivinaFrase"
        android:id="@+id/botonFrase"
        android:layout_gravity="center_horizontal"
        android:onClick="frase"/>
</LinearLayout>