<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PrincipalActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obras"
        android:id="@+id/botonObras"
        android:layout_gravity="center_horizontal"
        android:onClick="obras"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/juegos"
        android:id="@+id/botonJuegos"
        android:layout_gravity="center_horizontal"
        android:onClick="juegos"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foro"
        android:id="@+id/botonForo"
        android:layout_gravity="center_horizontal"
        android:onClick="peliculas"/>
>

</LinearLayout>