<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EscenaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preguntaFrase"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="216dp"
        android:layout_height="273dp"
        android:id="@+id/imagenFrase"/>

    <RadioGroup
        android:id="@+id/frase_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></RadioGroup>


    <Button
        android:id="@+id/button_corregirFrase"
        android:visibility="invisible"
        android:text="@string/corregir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="corregirImagen"/>

    <Button
        android:id="@+id/button_siguienteFrase"
        android:visibility="invisible"
        android:text="@string/siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="siguienteImagen"/>



</LinearLayout>