<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iratxe.rendecine.InterpretarescenaActivity"
    android:weightSum="1">

    <VideoView
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:id="@+id/escenaVideo"
        android:layout_weight="0.28" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grabar"
        android:id="@+id/botonGrabarvideo"
        android:onClick="grabarVideo"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:id="@+id/button_siguienteInterpretarE"
        android:onClick="siguienteInterpretarE"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grabacion"
        android:visibility="invisible"
        android:id="@+id/verGrabacion"
        android:layout_gravity="center_horizontal" />

    <VideoView
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="167dp"
        android:onClick="verVideo"
        android:id="@+id/interpretarEscenaVideo"/>


</LinearLayout>